# tarpc-tahini

./: .gitignore  .gitmodules  Cargo.toml  README.md  client.py  justfile  rust-toolchain.toml
ad_server/: Cargo.toml
ad_server/src/: advertisement_server.rs  email.rs  google_ads.rs  meta_ads.rs
client/: client.py
client/components/: account.py  api.py  chat.py  privacy.py
db_server/: Cargo.toml  expanded.txt
db_server/resources/: config.toml  schema.sql
db_server/src/: backend.rs  config.rs  database_server.rs
domains/advertisement_tahini_utils/: Cargo.toml  expanded.rs
domains/advertisement_tahini_utils/src/: lib.rs  policies.rs  service.rs  types.rs
domains/core_tahini_utils/: Cargo.toml
domains/core_tahini_utils/src/: lib.rs  types.rs
domains/core_tahini_utils/src/funcs/: mod.rs
domains/core_tahini_utils/src/policies/: expanded.rs  message_policy.rs  mod.rs  prompt_policy.rs  username_policy.rs
domains/core_tahini_utils/src/policies/adapters/: advertisement.rs  mod.rs
domains/database_tahini_utils/: Cargo.lock.bak  Cargo.toml
domains/database_tahini_utils/src/: lib.rs  policies.rs  service.rs  types.rs
domains/database_tahini_utils/src/policies/: conv_pol.rs  mod.rs  user_id.rs
domains/llm_tahini_utils/: Cargo.toml
domains/llm_tahini_utils/src/: service.rs
fronting/: Cargo.toml
fronting/src/: llm_client.rs
fronting2/: Cargo.toml
fronting2/src/: ads.rs  database.rs  inference.rs  login.rs  policy.rs  webserver.rs
fronting2/src/adapters/: mod.rs
fronting2/src/adapters/database_adapters/: history.rs  mod.rs  store_form.rs  uuid.rs
fronting2/src/policies/: login_uuid.rs  mod.rs
fronting2/src/routes/: ads.rs  database.rs  inference.rs  mod.rs
llm_server/: Cargo.toml
llm_server/src/: llm_server.rs  model_backend.rs  token_output_stream.rs  utils.rs
simple_example/: Cargo.toml  expanded.rs
simple_example/src/: policy.rs  service.rs  simple_client.rs  simple_server.rs
src/: client.rs  database_server.rs  llm_client.rs  llm_server.rs  model_backend.rs  server.rs
src/crates/Sesame/alohomora/: Cargo.toml
src/crates/Sesame/alohomora/src/: lib.rs
src/crates/Sesame/alohomora/src/bbox/: bbox_type.rs
src/crates/Sesame/alohomora/src/json_serde/: mod.rs
src/crates/Sesame/alohomora/src/tarpc/: client.rs  client2.rs  enums.rs  hacky.rs  mod.rs  server.rs  server2.rs  traits.rs
src/crates/Sesame/alohomora_derive/src/: lib.rs  tahini_service.rs  tahini_type.rs
src/crates/Sesame/alohomora_lints/src/: alohomora_sandbox_transfer.rs
src/crates/tarpc/example-service/: Cargo.toml
src/crates/tarpc/plugins/: Cargo.toml
src/crates/tarpc/plugins/src/: lib.rs
src/crates/tarpc/tarpc/: Cargo.toml
src/crates/tarpc/tarpc/src/: lib.rs
src/crates/tarpc/tarpc/src/server/limits/: channels_per_key.rs
src/policies/: inference_policy.rs  mod.rs
src/rpc/: database.rs  inference.rs  mod.rs  serde.rs  tcp.rs
src/simple_example/: policy.rs  service.rs  simple_client.rs  simple_server.rs
src/types/: database_types.rs  inference_types.rs  mod.rs
utils/: Cargo.toml  expanded.txt
utils/src/: lib.rs
utils/src/funcs/: mod.rs
utils/src/policies/: database_policy.rs  inference_policy.rs  marketing_policy.rs  mod.rs  shared_policies.rs
utils/src/rpc/: database.rs  inference.rs  marketing.rs  mod.rs
utils/src/types/: database_types.rs  inference_types.rs  marketing_types.rs  mod.rs
webserver/: Cargo.toml  client_attestation_config.toml
webserver/src/: webserver.rs
webserver/src/adapters/: ad_adapter.rs
webserver/src/adapters/database_adapters/: history.rs  mod.rs  store_form.rs  uuid.rs
webserver/src/policies/: ad_policy.rs  history.rs  idiot.rs  mod.rs
webserver/src/routes/: ads.rs  database.rs  inference.rs  login.rs
