[workspace]
members=["llm_server",
"db_server",
"simple_example",
"ad_server",
"webserver",
"domains/advertisement_tahini_utils",
"domains/core_tahini_utils",
"domains/llm_tahini_utils",
"domains/database_tahini_utils",
]
resolver="2"

[workspace.package]
authors = ["Alexandre Doukhan"]
edition="2021"

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[workspace.metadata.dylint]
libraries = [  
   { path = "./Sesame/alohomora_lints" },
]

# [dependencies.url]
# version = "=2.5.0"
#
# [dependencies.icu_properties_data]
# version = "=1.5.1"
#
# [dependencies.pest]
# version="=2.8.0"
#
# [dependencies.pest_meta]
# version="=2.8.0"
#
# [dependencies.pest_generator]
# version="=2.8.0"
#
# [dependencies.native-tls]
# version="=0.2.11"
