[package]
name = "ad_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.0", features = ["full", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-macros = "2.4.0"
tokio-util = "0.7.13"
futures = "0.3.31"
futures-util = "0.3.31"
tarpc = "0.34.0"
alohomora = { version = "0.1.0", path = "../Sesame/alohomora", default-features = false, features = ["alohomora_derive", "derive", "tahini"] }
lettre = "0.9.2"
lettre_email = "0.9.2"
keyword_extraction = { version = "1.5.0", features = ["yake"] }
stop-words = "0.8.1"
rand = "0.9.0"
advertisement_tahini_utils = { version = "0.1.0", path = "../domains/advertisement_tahini_utils/"}


[[bin]]
path = "./src/advertisement_server.rs"
name = "ad_server"
