[package]
name = "ad_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-macros = "2.4.0"
tokio-util = "0.7.13"
futures = "0.3.31"
futures-util = "0.3.31"
tarpc = "0.34.0"
alohomora = {version = "0.1.0", git = "https://github.com/brownsys/Sesame", branch = "extensions_devel", default-features = false, features = ["alohomora_derive", "derive"]}
lettre = "0.9.2"
lettre_email = "0.9.2"
keyword_extraction = { version = "1.5.0", features = ["yake"] }
stop-words = "0.8.1"
rand = "0.9.0"
advertisement_tahini_utils = { version = "0.1.0", path = "../domains/advertisement_tahini_utils/"}
tahini_tarpc = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", rev = "f75e671a477cc0c8cb59340c78c0afbe772dd296", features = ["derive"]}
hoodini_server = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", rev = "f75e671a477cc0c8cb59340c78c0afbe772dd296", features = ["sidecar"]}


[[bin]]
path = "./src/advertisement_server.rs"
name = "ad_server"


[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }


[dependencies.url]
version = "=2.5.0"

[dependencies.icu_properties_data]
version = "=1.5.1"

[dependencies.pest]
version="=2.8.0"

[dependencies.pest_meta]
version="=2.8.0"

[dependencies.pest_generator]
version="=2.8.0"

[dependencies.native-tls]
version="=0.2.11"
