[package]
name = "db_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-macros = "2.4.0"
tokio-util = "0.7.13"
futures = "0.3.31"
futures-util = "0.3.31"
tarpc = "0.34.0"
alohomora = {version = "0.1.0", git = "https://github.com/brownsys/Sesame", branch = "extensions_devel", default-features = false, features = ["alohomora_derive", "derive"]}
database_tahini_utils = {version = "0.1.0", path = "../domains/database_tahini_utils/"}
core_tahini_utils = {version = "0.1.0", path = "../domains/core_tahini_utils/"}
slog = "2.7.0"
uuid = { version = "1.16.0", features = ["v4"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tahini_tarpc = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", branch = "standalone_tahini", features = ["derive"]}
hoodini_server = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", branch = "standalone_tahini", features = ["sidecar"]}
# hoodini_server = {version = "0.1.0", path = "../../tahini_lib/tahini_attest/crates/hoodini-server/", features = ["sidecar"]}


[[bin]]
path = "./src/database_server.rs"
name = "db_server"

[patch.crates-io]
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }


[dependencies.url]
version = "=2.5.0"

[dependencies.icu_properties_data]
version = "=1.5.1"

[dependencies.pest]
version="=2.8.0"

[dependencies.pest_meta]
version="=2.8.0"

[dependencies.pest_generator]
version="=2.8.0"

[dependencies.native-tls]
version="=0.2.11"
