[package]
name = "llm_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
# tarpc = { version = "0.34.0", path = "./src/crates/tarpc032/tarpc", features = ["full"]}
tarpc = {version = "0.34.0", features = ["full"]}
tarpc-plugins = { version = "0.13.0", features = ["serde1"]}
# tarpc = {version = "0.32.0", path = "./src/crates/tarpc032/tarpc/", features = ["full"]}
# tarpc-plugins = { version = "0.12.0", path = "./src/crates/tarpc032/plugins"}
# tarpc-plugins = { version = "0.13.0", path = "./src/crates/tarpc/plugins"}
tokio = { version = "1.42.0", features = ["full", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-macros = "2.4.0"
# tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = "0.7.13"
tokenizers = "0.20.1"
hf-hub = "0.3.2"
serde_json = "1.0.132"
tokio-stream = "0.1.16"
educe = { version = "0.6.0", features = ["full"] }
alohomora = { version = "0.1.0", path = "../Sesame/alohomora", default-features = false, features = ["alohomora_derive", "derive", "tahini"] }
# services_utils = {version = "0.1.0", path= "../utils"}
core_tahini_utils = {version = "0.1.0", path = "../domains/core_tahini_utils/"}
llm_tahini_utils = {version = "0.1.0", path = "../domains/llm_tahini_utils/"}
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-examples = "0.8.4"
candle-transformers = "0.8.4"

[[bin]]
name = "llm_server"
path = "./src/llm_server.rs"
