[package]
name = "llm_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
# tarpc = { version = "0.34.0", path = "./src/crates/tarpc032/tarpc", features = ["full"]}
tarpc = {version = "0.34.0", features = ["full"]}
tarpc-plugins = { version = "0.13.0", features = ["serde1"]}
# tarpc = {version = "0.32.0", path = "./src/crates/tarpc032/tarpc/", features = ["full"]}
# tarpc-plugins = { version = "0.12.0", path = "./src/crates/tarpc032/plugins"}
# tarpc-plugins = { version = "0.13.0", path = "./src/crates/tarpc/plugins"}
tokio = { version = "1.42.0", features = ["full", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-macros = "2.4.0"
# tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = "0.7.13"
tokenizers = { version = "0.20.1", features = ["progressbar", "esaxx_fast", "http"] }
# tokenizers = { git = "https://github.com/huggingface/tokenizers.git", branch = "main" }
hf-hub = "0.3.2"
serde_json = "1.0.132"
tokio-stream = "0.1.16"
educe = { version = "0.6.0", features = ["full"] }
# alohomora = { version = "0.1.0", path = "../Sesame/alohomora", default-features = false, features = ["alohomora_derive", "derive", "tahini", "tahini_server"] }
alohomora = {version = "0.1.0", git = "https://github.com/brownsys/Sesame", branch = "extensions_devel", default-features = false, features = ["alohomora_derive", "derive"]}
core_tahini_utils = {version = "0.1.0", path = "../domains/core_tahini_utils/"}
llm_tahini_utils = {version = "0.1.0", path = "../domains/llm_tahini_utils/"}
minijinja = "2.11.0"
# candle-core = "0.6.0"
# candle-nn = "0.6.0"
# candle-transformers = "0.6.0"
candle-core = "0.7.0"
candle-nn = "0.7.0"
candle-transformers = "0.7.0"
# tracing = "0.1.41"
tahini_tarpc = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", rev = "f75e671a477cc0c8cb59340c78c0afbe772dd296", features = ["derive"]}
hoodini_server = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", rev = "f75e671a477cc0c8cb59340c78c0afbe772dd296", features = ["sidecar"]}

[[bin]]
name = "llm_server"
path = "./src/llm_server.rs"


[dependencies.half]
version = "=2.4.0"

[dependencies.zerofrom]
version= "=0.1.5"
