[package]
name = "simple_example"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-macros = "2.4.0"
tokio-util = "0.7.13"
alohomora = {version = "0.1.0", git = "https://github.com/brownsys/Sesame", branch = "extensions_devel", default-features = false, features = ["alohomora_derive", "derive"]}
anyhow = "1.0.94"
tarpc = "0.34.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
rand = { version = "0.8.5", features = ["serde"] }
aws-lc-rs = "1.13.1"
socket2 = "0.5.9"
tahini_tarpc = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", branch = "standalone_tahini", features = ["derive"]}

[[bin]]
name="server"
path="./src/simple_server.rs"

[[bin]]
name="client"
path="./src/simple_client.rs"
