[package]
name = "services_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tarpc = { version = "0.34.0", features = ["full"] }
alohomora = { version = "0.1.0", path = "../Sesame/alohomora", default-features = false, features = ["alohomora_derive", "derive", "tahini"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }

[lib]
name = "services_utils"
path = "src/lib.rs"
