[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-macros = "2.4.0"
tokio-util = "0.7.13"
alohomora = {version = "0.1.0", git = "https://github.com/brownsys/Sesame", branch = "extensions_devel", default-features = false, features = ["alohomora_derive", "derive"]}
anyhow = "1.0.94"
tarpc = "0.34.0"
rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main", features = ["json"]}
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
rand = "0.9.0"
core_tahini_utils = {version="0.1.0", path="../domains/core_tahini_utils/"}
advertisement_tahini_utils = {version="0.1.0", path="../domains/advertisement_tahini_utils/"}
llm_tahini_utils = {version="0.1.0", path="../domains/llm_tahini_utils"}
database_tahini_utils = {version = "0.1.0", path = "../domains/database_tahini_utils"}
lazy_static = "1.5.0"
tahini_tarpc = {version = "0.1.0", git = "https://github.com/alex-douk/tahini_lib", branch = "standalone_tahini", features = ["derive"]}

[[bin]]
name="webserver"
path="./src/webserver.rs"
