[package]
name = "advertisement_tahini_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
alohomora = { version = "0.1.0", path = "../../Sesame/alohomora/", default-features = false, features = ["alohomora_derive", "derive", "tahini"] }
tarpc = { version = "0.34.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"

[lib]
name="advertisement_tahini_utils"
path="src/lib.rs"
